<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskFormActivity">

    <EditText
        android:id="@+id/endTimeEdit"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:ems="10"
        android:focusable="false"
        android:clickable="true"
        android:inputType="time"
        android:hint="@string/end_time"
        app:layout_constraintBottom_toBottomOf="@+id/colorButton"
        app:layout_constraintEnd_toEndOf="@+id/startTimeEdit" />

    <TextView
        android:id="@+id/dayNameAtTask"
        android:layout_width="211dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayNameAtTask" />

    <ImageView
        android:id="@+id/colorButton"
        android:layout_width="148dp"
        android:layout_height="119dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskNameInput" />

    <EditText
        android:id="@+id/startTimeEdit"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/start_time"
        android:inputType="time"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colorButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="125dp"
        android:layout_height="98dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/change_color"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/colorButton"
        app:layout_constraintEnd_toEndOf="@+id/colorButton"
        app:layout_constraintStart_toStartOf="@+id/colorButton"
        app:layout_constraintTop_toTopOf="@+id/colorButton" />

</android.support.constraint.ConstraintLayout>